# simcardems

./: .buildinfo  .bumpversion.cfg  .cspell_dict.txt  .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  api.html  benchmark.html  cell_model.html  cli.html  convergence_spatial.html  convergence_temporal.html  cspell.config.yaml  custom_cell_model_pure_ep.html  custom_stimulus_domain.html  demo.html  development_install.html  docker.html  drug_effects_demo.html  electro_mechanical_coupling.html  electrophysiology_model.html  extract_currents.html  genindex.html  gui.html  index.html  initial_conditions_demo.html  install.html  install_docker.html  install_pip.html  mechanics_model.html  modules.html  niederer_benchmark.html  objects.inv  (+14 more)
.circleci/: config.yml
.github/workflows/: benchmark.yml  build_docs.yml  convergence-test.yml  deploy_docs.yml  docker-image.yml  github-pages.yml  main.yml  mpi.yml  pypi.yml
_modules/: index.html
_modules/simcardems/: ORdmm_Land.html  cli.html  config.html  datacollector.html  em_model.html  ep_model.html  geometry.html  gui.html  land_model.html  lvgeometry.html  mechanics_model.html  newton_solver.html  postprocess.html  runner.html  save_load_functions.html  setup_models.html  slabgeometry.html  time_stepper.html  utils.html  value_extractor.html
_sources/: CONTRIBUTING.md.txt  api.rst  benchmark.ipynb  cli.md  convergence_spatial.ipynb  custom_cell_model_pure_ep.md  custom_stimulus_domain.md  drug_effects_demo.md  electrophysiology_model.md  extract_currents.md  gui.md.txt  index.md  index.rst.txt  initial_conditions_demo.md  install.md.txt  modules.rst.txt  niederer_benchmark.md  release_test.md  release_test.md.txt  simcardems.rst.txt  simple_demo.md  simple_demo.md.txt  theory.rst.txt  tracking_values.md  ventricular_geometry.md
benchmarks/0221cc5/: config.json  results.json
benchmarks/04a9790/: config.json  results.json
benchmarks/0648726/: results.json
benchmarks/09a7e5b/: results.json
benchmarks/0c195ff/: results.json
benchmarks/0d80766/: results.json
benchmarks/0e0091e/: config.json  results.json
benchmarks/10592e9/: config.json  results.json
benchmarks/12ad5f2/: results.json
benchmarks/1353445/: results.json
benchmarks/159c6bc/: results.json
benchmarks/172470c/: results.json
benchmarks/1ed82dc/: results.json
benchmarks/1f7912f/: config.json  results.json
benchmarks/2022.3.0/: results.json
benchmarks/204b740/: results.json
benchmarks/2fe1309/: results.json
benchmarks/322191d/: results.json
benchmarks/32e43ff/: results.json
benchmarks/3398fd2/: results.json  state.json
benchmarks/35b1231/: results.json
benchmarks/376167c/: results.json
benchmarks/37f4c61/: results.json
benchmarks/37fb7d1/: results.json
benchmarks/38ad52c/: results.json  state.json
benchmarks/3a87bf1/: config.json  results.json
benchmarks/3b1d61b/: results.json
benchmarks/3ed0bc0/: results.json
benchmarks/42363b0/: results.json
benchmarks/47edd23/: config.json  results.json
benchmarks/4cc3e7a/: results.json
benchmarks/4d3a653/: results.json
benchmarks/5282d4f/: config.json  results.json
benchmarks/5580bef/: config.json  results.json
benchmarks/5992724/: results.json
benchmarks/5a86d28/: config.json  results.json
benchmarks/5cc1a44/: results.json
benchmarks/5d5bd73/: config.json  results.json
benchmarks/5edda13/: config.json  results.json
benchmarks/60e69df/: config.json  results.json
benchmarks/630ed09/: results.json
benchmarks/67aba10/: results.json
benchmarks/68926df/: results.json
benchmarks/68ae7bb/: results.json
benchmarks/69503d0/: results.json
benchmarks/695cd7b/: config.json  results.json
benchmarks/6dde0c0/: config.json  results.json
benchmarks/6e55904/: results.json
benchmarks/71a7b0e/: results.json
benchmarks/739dc1c/: results.json
benchmarks/7d2252c/: results.json
benchmarks/7f51a50/: config.json  results.json
benchmarks/7ffac90/: config.json  results.json
benchmarks/813ba9c/: config.json  results.json
benchmarks/8b11e8d/: results.json
benchmarks/90b65d3/: results.json
benchmarks/93c349e/: config.json  results.json
benchmarks/947b107/: results.json
benchmarks/97e958d/: results.json
benchmarks/999fcfa/: results.json
benchmarks/9b246fe/: config.json  results.json
benchmarks/9d5c1b1/: results.json
benchmarks/9d72060/: results.json
benchmarks/9f2fd38/: config.json  results.json
benchmarks/a3a23b2/: results.json
benchmarks/a4ea024/: results.json
benchmarks/a57adc9/: results.json
benchmarks/a906ec1/: results.json
benchmarks/ad14db8/: results.json
benchmarks/bc47c96/: config.json  results.json
benchmarks/bca2a49/: config.json  results.json
demos/: benchmark.py  custom_cell_model_pure_ep.py  custom_stimulus_domain.py  demo.py  demo_ecg.py  drug_effects_demo.py  electrodes.json  endocardial_stimulation.py  extract_currents.py  gui.py  heterogeneity.json  heterogeneity_demo.py  initial_conditions_demo.py  niederer_benchmark.py  niederer_benchmark_with_mechanics.py  patient_specific_lv.py  release_test.py  simple_demo.py  simple_demo_explicit.py  simple_demo_fully_coupled.py  simple_demo_pure_ep.py  stiffness_sensitivity.py  timestep_sensitivity.py  timestep_threshold_sensitivity.py  tracking_values.py  ventricular_geometry.py
docs/: _config.yml  _toc.yml  api.rst  benchmark.ipynb  cli.md  convergence_spatial.ipynb  convergence_temporal.ipynb  development_install.md  docker.md  gui.md  index.md  install.md  install_docker.md  install_pip.md  mechanics_model.md  visualization.md
joss/: paper.bib  paper.md
sandbox/: mesh_interpolate.py  newtonsolver_ode.py  quadrature_space.py  weak_dirichlet.py
scripts/: upload-data.py  upload-old-benchmarks.py
tests/: conftest.py  smoke.py  test_boundary_conditions.py  test_cell_model.py  test_cli.py  test_datacollector.py  test_em_model.py  test_geometry.py  test_h5py_mpi.py  test_mechanics_model.py  test_models.py  test_postprocessing.py  test_runner.py  test_save_load_functions.py
(+240 files in other folders)
