[metadata]
name = simcardems
description = Simula Cardiac electromechanics solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/simcardems
author = Henrik Finsberg, Ilsbeth van Herck, Cécile Daversin-Catty
author_email = henriknf@simula.no
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = action potential, cardiac mechanics, electrophysiology, electromechanics

[options]
packages = find:
install_requires =
    cbcbeat
    click
    fenics-pulse
    h5py
    matplotlib
    numpy
    scipy
    tqdm
python_requires = >=3.6
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    Sphinx
    black
    bump2version
    flake8
    ipython
    isort
    mypy
    pdbpp
    pip
    pre-commit
    pytest
    pytest-cov
    sphinx
    twine
    wheel

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=src/simcardems --cov-report html --cov-report term-missing -v
testpaths =
    tests
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
filterwarnings =
    ignore::UserWarning
    ignore::DeprecationWarning

[mypy]
files = src/simcardems,tests
ignore_missing_imports = true
exclude = docs
