[metadata]
name = simcardems
description = Simula Cardiac electromechanics solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/simcardems
author = Henrik Finsberg, Ilsbeth van Herck, Cécile Daversin-Catty
author_email = henriknf@simula.no
license = LGPL-2.1
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = action potential, cardiac mechanics, electrophysiology, electromechanics

[options]
packages = find:
install_requires =
    ap-features
    cardiac-geometries
    cbcbeat
    click
    fenics-pulse
    h5py
    matplotlib
    numpy
    scipy
    tqdm
python_requires = >=3.7
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    Sphinx
    black
    build
    bump2version
    flake8
    ipython
    isort
    mypy
    pdbpp
    pip
    pre-commit
    pytest
    pytest-cov
    sphinx
    twine
    wheel
docs =
    jupyter-book
    jupytext
    pandas
    plotly
    sphinxcontrib-bibtex
gui =
    fenics-plotly
    streamlit

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=src/simcardems --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
    tests
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
filterwarnings =
    ignore::UserWarning
    ignore::DeprecationWarning

[mypy]
files = src/simcardems,tests
ignore_missing_imports = true
exclude = docs

[coverage:run]
omit =
    src/simcardems/gui.py
